# career-agent-assistant

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  startup.sh
browser_extension/: README.md  content_script.js  manifest.json  sidepanel.css  sidepanel.html  sidepanel.js
data/browser_samples/: chat_boss.txt  job_detail_boss.txt  job_list_boss.txt
data/eval/: jd_cases.jsonl
data/knowledge_base/: chunks.jsonl  chunks.repos.txt
data/samples/: README.md  github_summary.md  jd_agent_intern.md  profile.md  projects.md
demo/cli/: run_job_match_demo.py
demo/defense_web/: index.html  slides.html
demo/evaluation/: run_evaluation.py
demo/streamlit/: app.py  styles.py  ui_components.py
docs/: defense_speaker_notes.md  defense_speaker_notes_full.md  defense_technical_deep_dive.md  demo_script.md  evidence_design.md  ppam_architecture.md  rag_flow_write_read.md  rag_pipeline_flow.md  testing_strategy.md
docs/architecture/: agent_interface_design.md  industrial_agentic_rag.md  internship_copilot_product_architecture.md
docs/runbooks/: browser_assistant_usage.md  docker.md
docs/specs/: agentic_rag_phase2.md
docs/superpowers/: README.md
docs/tasks/: agentic_rag_phase2_tasks.md
documents/: 00-project-overview.md  97-journal.md  99-project-planning.md
documents/01-requirements/: 01-user-scenarios.md  02-mvp-scope.md  03-non-goals.md  04-acceptance-criteria.md  README.md
documents/02-design/: 01-overall-architecture.md  README.md  (+8 more)
scripts/: build_ppt.py  run_eval.py
tests/: __init__.py
(+292 files in other folders)
