[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "career-agent-assistant"
version = "0.1.0"
description = "RAG and LangGraph based career agent assistant MVP."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "langgraph>=1.0,<2.0",
]

[project.optional-dependencies]
demo = [
  "streamlit>=1.30",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
